# Merryl

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  README.md  mvp_technical_plan.md  phase_0_decisions.md
config/: app.toml  sector_etfs.toml  universe_sp500.toml
dashboard/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
docs/: application_state_remaining_work_spec.md  architecture_overview.md  backtest_scope_clarity_spec.md  catalyst_earnings_source_spec.md  cli_reference.md  data_quality_reproducibility_spec.md  data_sources.md  extracted_stock_filters.md  implementation_spec.md  industry_specific_validation_spec.md  market_regime_formula_decision_checkpoint_spec.md  market_regime_v1_spec.md  market_rotation_system_spec.md  mvp_technical_plan_spec.md  phase_0_decisions_spec.md  phase_3_backtest_validation_spec.md  phase_4_dashboard_api_spec.md  phase_4_dashboard_stabilization_spec.md  phase_5_data_source_expansion_spec.md  phase_5_readiness_gate_spec.md  phase_5b_macro_regime_validation_spec.md  phase_5c_event_context_validation_spec.md  phase_5c_source_coverage_review_spec.md  phase_5c_structured_catalyst_source_spec.md  phase_6_intraday_execution_readiness_spec.md  pre_dashboard_stability_backlog_spec.md  sector_formula_decision_checkpoint_spec.md  sector_score_review_spec.md  setup_guide.md  spec_completeness_gate_spec.md  static_dashboard_deployment_spec.md  watchlist_actionability_extension_filter_spec.md  watchlist_convergence_review_spec.md
src/: actionability.rs  classification.rs  intraday.rs  lib.rs  (+1 more)
(+91 files in other folders)
