[package]
name = "merryl"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
axum = "0.8.9"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4", features = ["derive"] }
csv = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
scraper = "0.23"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "signal"] }
tower-http = { version = "0.6.11", features = ["fs"] }

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
